--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,15 @@ p {
 
   max-width: 75ch;
 }
+
+a {
+  color: hsl(240, 100%, 50%);
+
+  &:visited {
+    color: hsl(30, 100%, 50%);
+  }
+}
+
 .card {
   box-shadow: 0 0 1px 2px hsl(0, 3%, 81%);
 
